examples/bad/ERROR_UNDEFINED_VARIABLE/simple_undefined_var.st
language core;

fn main(n : Nat) -> Nat {
    return a
}

//ERROR_UNDEFINED_VARIABLE
